--- a/kafka/config/zookeeper.properties
+++ b/kafka/config/zookeeper.properties
@@ -15,6 +15,8 @@
 # the directory where the snapshot is stored.
 dataDir=data_path/zookeeper-data/data
 dataLogDir=data_path/zookeeper-data/log
+initLimit=10
+syncLimit=50
 # the port at which the clients will connect
 clientPort=2181
 # disable the per-ip limit on the number of connections since this is a non-production config
@@ -24,6 +26,6 @@ maxClientCnxns=0
 admin.enableServer=false
 # admin.serverPort=8080
 
-server.1=localhost:2888:3888
+server.1=host01:2888:3888
 server.2=host02:2888:3888
 server.3=host03:2888:3888
